--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -21,13 +24,11 @@ button {
   user-select: none;
   cursor: pointer;
   outline: none;
-  
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 #wrapper {
   height: 100vh;
-  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -43,13 +44,12 @@ button {
   width: 100%;
   height: 100%;
   background: black;
-  
   display: flex;
   flex-direction: column;
 }
 
 #wrapper .calc {
-  box-shadow: 0px 0px 20px 0px #aaa;
+  box-shadow: 0 0 20px 0 #aaa;
 }
 
 .calc-display {
@@ -57,7 +57,6 @@ button {
   background: #1c191c;
   line-height: 130px;
   font-size: 6em;
-  
   flex: 1;
 }
 
@@ -74,7 +73,6 @@ button {
 
 .keypad {
   height: 400px;
-  
   display: flex;
 }
 
@@ -84,11 +82,11 @@ button {
 
 .calc .function-keys {
   display: flex;
+  background: linear-gradient(to bottom, rgba(202, 202, 204, 1) 0%, rgba(196, 194, 204, 1) 100%);
 }
 
 .calc .digit-keys {
   background: #e0e0e7;
-  
   display: flex;
   flex-direction: row;
   flex-wrap: wrap-reverse;
@@ -98,37 +96,40 @@ button {
   width: 80px;
   height: 80px;
   border-top: 1px solid #777;
-  border-right: 1px solid #666;  
+  border-right: 1px solid #666;
   text-align: center;
   line-height: 80px;
 }
+
 .calc .function-keys .key {
   font-size: 2em;
 }
+
 .calc .function-keys .key-multiply {
   line-height: 50px;
 }
+
 .calc .digit-keys .key {
   font-size: 2.25em;
 }
+
 .calc .digit-keys .key-0 {
   width: 160px;
   text-align: left;
   padding-left: 32px;
 }
+
 .calc .digit-keys .key-dot {
   padding-top: 1em;
   font-size: 0.75em;
 }
+
 .calc .operator-keys .key {
   color: white;
   border-right: 0;
   font-size: 3em;
 }
 
-.calc .function-keys {
-  background: linear-gradient(to bottom, rgba(202,202,204,1) 0%, rgba(196,194,204,1) 100%);
-}
 .calc .operator-keys {
-  background:  linear-gradient(to bottom, rgba(252,156,23,1) 0%, rgba(247,126,27,1) 100%);
+  background: linear-gradient(to bottom, rgba(252, 156, 23, 1) 0%, rgba(247, 126, 27, 1) 100%);
 }
