--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@ button {
 }
 
 button:active {
-  box-shadow: inset 0px 0px 80px 0px rgba(0,0,0,0.25);
+  box-shadow: inset 0 0 80px 0 rgba(0, 0, 0, 0.25);
 }
 
 #wrapper {
@@ -124,7 +124,7 @@ button:active {
 }
 
 .calc .digit-keys .key-dot {
-  padding-top: 0em;
+  padding-top: 0;
   font-size: 3rem;
 }
 
