--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,15 @@ html {
   box-sizing: inherit;
 }
 
+h1 {
+  font-size: 1.4rem;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 body {
   margin: 0;
   font-size: 14px;
@@ -34,11 +43,22 @@ button:active {
 #wrapper {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 #root {
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  min-width: 100%;
+}
+
+.calc-container {
   width: 320px;
   height: 520px;
   position: relative;
